# teddycloud-web/src/api/models/OptionsList.ts
@@ -1,0 +1,72 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * TeddyCloud API
+ * OpenAPI specification for TeddyCloud Backend API
+ *
+ * The version of the OpenAPI document: 1.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import type { OptionsItem } from './OptionsItem';
+import {
+    OptionsItemFromJSON,
+    OptionsItemFromJSONTyped,
+    OptionsItemToJSON,
+} from './OptionsItem';
+
+/**
+ * List of Options.
+ * @export
+ * @interface OptionsList
+ */
+export interface OptionsList {
+    /**
+     * 
+     * @type {Array<OptionsItem>}
+     * @memberof OptionsList
+     */
+    options?: Array<OptionsItem>;
+}
+
+/**
+ * Check if a given object implements the OptionsList interface.
+ */
+export function instanceOfOptionsList(value: object): boolean {
+    let isInstance = true;
+
+    return isInstance;
+}
+
+export function OptionsListFromJSON(json: any): OptionsList {
+    return OptionsListFromJSONTyped(json, false);
+}
+
+export function OptionsListFromJSONTyped(json: any, ignoreDiscriminator: boolean): OptionsList {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'options': !exists(json, 'options') ? undefined : ((json['options'] as Array<any>).map(OptionsItemFromJSON)),
+    };
+}
+
+export function OptionsListToJSON(value?: OptionsList | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'options': value.options === undefined ? undefined : ((value.options as Array<any>).map(OptionsItemToJSON)),
+    };
+}
+
