# teddycloud-web/src/api/models/Status.ts
@@ -1,72 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * TeddyCloud API
- * OpenAPI specification for TeddyCloud Backend API
- *
- * The version of the OpenAPI document: 1.0.1
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-import type { StatusData } from './StatusData';
-import {
-    StatusDataFromJSON,
-    StatusDataFromJSONTyped,
-    StatusDataToJSON,
-} from './StatusData';
-
-/**
- * Server status.
- * @export
- * @interface Status
- */
-export interface Status {
-    /**
-     * 
-     * @type {StatusData}
-     * @memberof Status
-     */
-    data?: StatusData;
-}
-
-/**
- * Check if a given object implements the Status interface.
- */
-export function instanceOfStatus(value: object): boolean {
-    let isInstance = true;
-
-    return isInstance;
-}
-
-export function StatusFromJSON(json: any): Status {
-    return StatusFromJSONTyped(json, false);
-}
-
-export function StatusFromJSONTyped(json: any, ignoreDiscriminator: boolean): Status {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'data': !exists(json, 'data') ? undefined : StatusDataFromJSON(json['data']),
-    };
-}
-
-export function StatusToJSON(value?: Status | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'data': StatusDataToJSON(value.data),
-    };
-}
-
