# teddycloud-web/src/api/models/StatusDataAttributes.ts
@@ -1,75 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * TeddyCloud API
- * OpenAPI specification for TeddyCloud Backend API
- *
- * The version of the OpenAPI document: 1.0.1
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-/**
- * All object attributes
- * @export
- * @interface StatusDataAttributes
- */
-export interface StatusDataAttributes {
-    /**
-     * Application version
-     * @type {string}
-     * @memberof StatusDataAttributes
-     */
-    version: string;
-    /**
-     * Server status
-     * @type {boolean}
-     * @memberof StatusDataAttributes
-     */
-    ping: boolean;
-}
-
-/**
- * Check if a given object implements the StatusDataAttributes interface.
- */
-export function instanceOfStatusDataAttributes(value: object): boolean {
-    let isInstance = true;
-    isInstance = isInstance && "version" in value;
-    isInstance = isInstance && "ping" in value;
-
-    return isInstance;
-}
-
-export function StatusDataAttributesFromJSON(json: any): StatusDataAttributes {
-    return StatusDataAttributesFromJSONTyped(json, false);
-}
-
-export function StatusDataAttributesFromJSONTyped(json: any, ignoreDiscriminator: boolean): StatusDataAttributes {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'version': json['version'],
-        'ping': json['ping'],
-    };
-}
-
-export function StatusDataAttributesToJSON(value?: StatusDataAttributes | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'version': value.version,
-        'ping': value.ping,
-    };
-}
-
